--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -2,8 +2,25 @@
 <html>
 <head>
 	<title>Restaurant Menu (module 2 assigment)</title>
+	<link rel = "stylesheet" href = "/css/style.css">
+	<p class = "main-heading">Our Menu</p>
 </head>
 <body>
-<h1>Our Menu</h1>
+	<!--Title-->
+	<div class = "title">
+		
+	</div>
+	<!--Menu Items-->
+	<div>
+		<div>
+			
+		</div>
+		<div>
+			
+		</div>
+		<div>
+			
+		</div>
+	</div>
 </body>
 </html>
