--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Restaurant Menu (module 2 assigment)</title>
-	<link rel = "stylesheet" href = "/css/style.css">
-	<p class = "main-heading">Our Menu</p>
+<meta charset="utf-8">
+<title>Restaurant Menu (module 2 assigment)</title>
+<link rel = "stylesheet" href = "style.css">
 </head>
 <body>
 	<!--Title-->
 	<div class = "title">
-		
+		<p class = "heading">Our Menu</p>
 	</div>
 	<!--Menu Items-->
 	<div>
