--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Restaurant Menu (module 2 assigment)</title>
+<title>Restaurant Menu (coursera-web week 2 assigment)</title>
 <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
 	<!--Title-->
-	<div class = "title">
-		<p class = "heading">Our Menu</p>
-	</div>
+	<h1 class = "heading">Our Menu
+	</h1>
 	<!--Menu Items-->
 	<div>
 		<div>
