--- a/mod2-sol/index.html
+++ b/mod2-sol/index.html
@@ -14,14 +14,14 @@
 
 	<!--Menu Items-->
 	<div>
-		<div>
-			
+		<div class='entree chicken'>
+			<h1 class='entree-title'>Chicken</h1>
 		</div>
-		<div>
-			
+		<div class='entree beef'>
+			<h1 class='entree-title'>Beef</h1>
 		</div>
-		<div>
-			
+		<div class='entree sushi'>
+			<h1 class='entree-title'>Sushi</h1>
 		</div>
 	</div>
 </body>
