--- a/mod2-sol/index.html
+++ b/mod2-sol/index.html
@@ -3,8 +3,9 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Restaurant Menu (coursera-web week 2 assigment)</title>
+	<title>Restaurant Menu (coursera-web week 2 assigment)</title>	
 	<link rel = "stylesheet" href = "css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
 </head>
 
 <body>
