--- a/mod2-sol/index.html
+++ b/mod2-sol/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Restaurant Menu (coursera-web week 2 assigment)</title>	
 	<link rel = "stylesheet" href = "css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Allura|Raleway" rel="stylesheet">
 </head>
 
 <body>
@@ -17,15 +17,15 @@
 	<div>
 		<div class='entree chicken'>
 			<h1 class='entree-title'>Chicken</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tria genera bonorum; Nam quid possumus facere melius? Respondent extrema primis, media utrisque, omnia omnibus. Cui Tubuli nomen odio non est? Duo Reges: constructio interrete. Ne amores quidem sanctos a sapiente alienos esse arbitrantur.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tria genera bonorum; Nam quid possumus facere melius? Respondent extrema primis, media utrisque, omnia omnibus. Cui Tubuli nomen odio non est? Duo Reges: constructio interrete. </p>
 		</div>
 		<div class='entree beef'>
 			<h1 class='entree-title'>Beef</h1>
-			<p>Et harum quidem rerum facilis est et expedita distinctio. At ille non pertimuit saneque fidenter: Istis quidem ipsis verbis, inquit; Terram, mihi crede, ea lanx et maria deprimet. Quid, si etiam iucunda memoria est praeteritorum malorum? Quorum sine causa fieri nihil putandum est. Tum Piso: Quoniam igitur aliquid omnes, quid Lucius noster?</p>
+			<p>Et harum quidem rerum facilis est et expedita distinctio. At ille non pertimuit saneque fidenter: Istis quidem ipsis verbis, inquit; Terram, mihi crede, ea lanx et maria deprimet.</p>
 		</div>
 		<div class='entree sushi'>
 			<h1 class='entree-title'>Sushi</h1>
-			<p>Quis enim confidit semper sibi illud stabile et firmum permansurum, quod fragile et caducum sit? Duarum enim vitarum nobis erunt instituta capienda. Igitur neque stultorum quisquam beatus neque sapientium non beatus. Cum id fugiunt, re eadem defendunt, quae Peripatetici, verba. Nunc de hominis summo bono quaeritur; Istam voluptatem perpetuam quis potest praestare sapienti?</p>
+			<p>Quis enim confidit semper sibi illud stabile et firmum permansurum, quod fragile et caducum sit? Duarum enim vitarum nobis erunt instituta capienda. Igitur neque stultorum quisquam beatus neque sapientium non beatus. </p>
 		</div>
 	</div>
 </body>
