--- a/mod2-sol/index.html
+++ b/mod2-sol/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Restaurant Menu (coursera-web week 2 assigment)</title>	
 	<link rel = "stylesheet" href = "css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Allura|Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Allura|Fresca" rel="stylesheet">
 </head>
 
 <body>
