--- a/mod2-sol/index.html
+++ b/mod2-sol/index.html
@@ -15,7 +15,7 @@
 	<h1 class = "heading">Our Menu</h1>
 
 	<!--Menu Items-->
-	<div>
+	<div class='content'>
 		<div class='entree chicken'>
 			<h1 class='entree-title'>Chicken</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tria genera bonorum; Nam quid possumus facere melius? Respondent extrema primis, media utrisque, omnia omnibus. Cui Tubuli nomen odio non est? Duo Reges: constructio interrete. </p>
